--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 112.5%; /* Increases base from 16px to 18px */
+  font-size: 150%; 
 }
 
 @import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
